chore(core): update api schema to match new engine schema
